--- a/GridWorld/Makefile
+++ b/GridWorld/Makefile
@@ -1,3 +1,4 @@
+.PHONY: Makefile
 Makefile:
 	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
 
