--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -112,6 +112,7 @@ clean: Generator_clean InvertedPendulum_clean Simulator_clean LSTDmu_clean
 ** Inception
 
    #+begin_src makefile :tangle Makefile :noweb yes
+.PHONY:Makefile
 Makefile:
 	cat *.org > All.org; emacs -batch --visit All.org --funcall org-babel-tangle --script ~/.emacs; rm All.org
    #+end_src
