--- a/GridWorld/Makefile.org
+++ b/GridWorld/Makefile.org
@@ -23,7 +23,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+begin_src make :tangle Makefile :noweb yes
   CFLAGS+=-I..
    #+end_src
-  #+begin_src makefile :tangle Makefil :noweb yes
+  #+begin_src makefile :tangle Makefile :noweb yes
 <<LSTDmu_Exp_c2o_make>>
 <<Generator_c2o_make>>
 <<Simulator_c2o_make>>
