--- a/InvertedPendulum/Makefile.org
+++ b/InvertedPendulum/Makefile.org
@@ -83,7 +83,7 @@ Those who do not fit in the others categories (because they fit in more than one
   #+begin_src make :tangle Makefile :noweb yes
   CFLAGS+=-I..
    #+end_src
-  #+begin_src makefile :tangle Makefil :noweb yes
+  #+begin_src makefile :tangle Makefile :noweb yes
 <<Generator_c2o_make>>
 <<InvertedPendulum_c2o_make>>
 <<Simulator_c2o_make>>
