--- a/Makefile.org
+++ b/Makefile.org
@@ -26,12 +26,15 @@ Those who do not fit in the others categories (because they fit in more than one
   #+end_src
 ** Code extraction
   #+begin_src makefile :tangle Makefile :noweb yes
+tangle=emacs -batch --visit $1 --funcall org-babel-tangle --script ~/.emacs
+
 <<LSPI_code_make>>
 <<LSTDQ_code_make>>
 <<LSTDmu_code_make>>
 <<TT_Exp2_code_make>>
 <<TT_Exp3_code_make>>
 <<utils_code_make>>
+<<TT_code_make>>
 <<TT_Test0_code_make>>
 <<TT_Test1_code_make>>
 <<TT_Test23_code_make>>
