Travail en cours pour que ce qui marche sous Linux marche également sous MacOSX.
Des changements mineurs qu'il faudra enlever sous Linux, tel les options d'xargs qui deviennent -t et non plus -tr.

Des changements plus important, comme l'ajout d'une ligne vide en fin de snippet sur la plupart des morceaux codes qui devront être tanglés. Ce genre de changement, dûs à une différence de comportement entre org sur macosx et org sous linux, doit pouvoir être conservé sous Linux même s'il n'est pas nécessaire.

A noter que seuls TT_test* passent avec ce commit, on bloque encore sur TT_Exp1.

--- a/Makefile.org
+++ b/Makefile.org
@@ -66,7 +66,7 @@ export LFLAGS=`pkg-config --libs gsl` -lm -O3
     #+end_src
 ** Cleaning
     #+begin_src makefile :tangle Makefile :noweb yes
-export XARGS_OPT=-tr
+export XARGS_OPT=-t
 <<LSPI_clean_make>>
 <<LSTDQ_clean_make>>
 <<LSTDmu_clean_make>>
